# Flux-Editor

./: .gitignore  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  latest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  updater.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  help-request.md  question.md
.github/workflows/: main.yml
.narvik/: config.json
public/: splash.html
resources/: FONT-LICENSES.txt  MESLO-LICENSE  THIRD-PARTY-LICENSES-JS.txt  THIRD-PARTY-LICENSES-Rust.txt  THIRD-PARTY-LICENSES.txt  Third-Party-Licenses.txt
src/: App.tsx  global.css  globals.css  index.tsx  input.css  logger.ts  menuActions.ts  menuListeners.ts  settingsManager.ts  tailwind.css
src-tauri/: Cargo.toml  about.toml  deny.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/icons/mac/: icon.icns
src-tauri/src/: commands.rs  lsp_client.rs  main.rs  menu.rs  utils.rs  window_ext.rs
src-tauri/src/commands/: cmd.rs  fs.rs  git.rs  path.rs  trash.rs  window.rs
src-tauri/src/utils/: dir.rs  path.rs  time.rs
src/components/ContextMenu/: ContextMenu.tsx  contextMenuActions.ts
src/components/Editor/: Ace.tsx  EditorComponent.module.css  EditorComponent.tsx
src/components/Editor/components/: EditorBreadcrumbs.tsx  EditorTabs.tsx
src/components/Editor/themes/: dark.css
src/components/Editor/utils/: getClosingBracket.ts  getClosingChar.ts
src/components/FileBrowser/: FileBrowser.tsx  Startup.tsx
src/components/Icons/: FileIcons.tsx  FluxIcon.tsx  FluxLogo.tsx  Icons.tsx
src/components/Menu/: Menu.tsx  Submenu.tsx
src/components/Search/: Search.module.css  Search.tsx  commands.ts
src/components/Search/results/: commands.json  test.json
src/components/SplitPane/: SplitPane.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/StatusBar/components/: GitBranch.tsx  Lang.tsx  Update.tsx
src/components/Terminal/: Terminal.module.css  Terminal.tsx
src/components/TitleBar/: TitleBar.tsx
src/components/TitleBar/components/: ModuleToggle.tsx
src/components/WindowControls/: GnomeControls.tsx  MacControls.tsx  WinControls.tsx  WindowControls.tsx
src/menu/: menuActions.ts  menuListeners.ts
src/pages/: Editor.tsx  EditorFallback.tsx  Welcome.tsx
src/ui/: Button.tsx  ButtonBg.tsx  ButtonIcon.tsx  ButtonTransparent.tsx  Dropdown.tsx  Input.tsx  Loading.tsx  Modal.tsx
src/ui/css/: Dropdown.module.css  Loading.module.css
src/utils/: Icons.tsx  array.ts  char.ts  checkDir.ts  dir.ts  file.ts  fileIcon.ts  git.ts  os.ts  path.ts  string.ts  timing.ts
src/utils/git/: clone.ts
src/utils/lsp/: lsp.ts
