[package]
name = "narvik"
version = "0.0.1"
description = "a lightweight and fast code editor"
authors = ["Narvik Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-save", "dialog-ask", "fs-exists", "path-all", "fs-read-file", "fs-create-dir", "fs-write-file", "fs-read-dir", "dialog-message", "dialog-open", "os-all", "window-set-size", "window-close", "window-maximize", "window-unmaximize", "window-start-dragging", "window-set-fullscreen", "window-minimize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2.2"
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
