[package]
name = "FluxEditor"
version = "0.2.0"
description = "A minimalist and lightweight code editor"
authors = ["The Flux Editor Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "app-all", "dialog-save", "dialog-ask", "fs-exists", "fs-read-file", "fs-create-dir", "fs-write-file", "fs-read-dir", "dialog-message", "dialog-open", "os-all", "window-set-size", "window-close", "window-maximize", "window-unmaximize", "window-start-dragging", "window-set-fullscreen", "window-minimize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
log = "0.4.22"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
[target.'cfg(not(target_os = "macos"))'.dependencies]
window-shadows = "0.2.2"
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2.7"
[target.'cfg(not(any(windows)))'.dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
